Restructured urls, added opensearch.xml.

--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -3,8 +3,9 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<title>webCLI</title>
-	<link rel="stylesheet" type="text/css" href="/_media/webcli.css">
-	<link rel="icon" href="/_media/favicon.png">
+	<link rel="stylesheet" type="text/css" href="/media/webcli.css">
+	<link rel="icon" href="/media/favicon.png">
+	<link rel="search" type="application/opensearchdescription+xml" href="http://cli.example.com/media//opensearch.xml" title="webCLI" />i	
 </head>
 
 <body>
