--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -5,7 +5,7 @@
 	<title>webCLI</title>
 	<link rel="stylesheet" type="text/css" href="/media/webcli.css">
 	<link rel="icon" href="/media/favicon.png">
-	<link rel="search" type="application/opensearchdescription+xml" href="http://cli.example.com/media//opensearch.xml" title="webCLI" />i	
+	<link rel="search" type="application/opensearchdescription+xml" href="http://cli.example.com/media//opensearch.xml" title="webCLI" />
 </head>
 
 <body>
