--- a/media/webcli.css
+++ b/media/webcli.css
@@ -33,6 +33,8 @@ ul.commands li {
 
 ul.commands li:hover {
 	box-shadow: 3px 3px 10px 1px #888;
+	-moz-box-shadow: 3px 3px 10px 1px #888;
+	-webkit-box-shadow: 3px 3px 10px 1px #888;
 }
 
 ul.commands li.common {
