--- a/webcli/cli/templates/404.html
+++ b/webcli/cli/templates/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-	<title>webCLI</title>
+	<title>webCLI: 404</title>
 	<link rel="stylesheet" type="text/css" href="/media/webcli.css">
 	<link rel="icon" href="/media/favicon.png">
 </head>
