Added a bit more description to the home page.

--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -11,7 +11,12 @@
 <body>
 
 <div id="main">
-	<p>webCLI.</p>
+	<p><b>webCLI</b>, a command-line interface to the web.</p>
+
+	<p>
+		webCLI is essentially a <a href="http://yubnub.org/">yubnub</a> clone, because... REASONS!<br>
+		The idea is that with an <a href="/media/opensearch.xml">opensearch.xml</a>-compatible browser, you set webCLI as your default search engine, so that you can type "gim porsche 911" straight in your browsers address bar to search Google Images for a porsche 911.
+	</p>
 
 	<ul class="commands">
 		{% for c in commands %}
