--- a/media/webcli.css
+++ b/media/webcli.css
@@ -3,8 +3,13 @@ body {
 	font-size: 14px;
 }
 
+p {
+	margin: 1em auto;
+	max-width: 40em;
+}
+
 div#main {
-	margin: 0 auto;
+	margin: 30px auto 10px auto;
 	min-width: 600px;
 	max-width: 1200px;
 	text-align: center;
