Converted project to Python 3, Django 1.9, CY-style settings/env.

--- a/webcli/cli/templates/404.html
+++ b/webcli/cli/templates/404.html
@@ -3,8 +3,8 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<title>webCLI: 404</title>
-	<link rel="stylesheet" type="text/css" href="/media/webcli.css">
-	<link rel="icon" href="/media/favicon.png">
+	<link rel="stylesheet" type="text/css" href="/static/webcli.css">
+	<link rel="icon" href="/static/favicon.png">
 </head>
 
 <body>
