--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -3,9 +3,9 @@
 <head>
 	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
 	<title>webCLI</title>
-	<link rel="stylesheet" type="text/css" href="/media/webcli.css">
-	<link rel="icon" href="/media/favicon.png">
-	<link rel="search" type="application/opensearchdescription+xml" href="/media/opensearch.xml" title="webCLI" />
+	<link rel="stylesheet" type="text/css" href="/static/webcli.css">
+	<link rel="icon" href="/static/favicon.png">
+	<link rel="search" type="application/opensearchdescription+xml" href="/static/opensearch.xml" title="webCLI" />
 </head>
 
 <body>
@@ -15,7 +15,7 @@
 
 	<p>
 		webCLI is essentially a <a href="http://yubnub.org/">yubnub</a> clone, because... REASONS!<br>
-		The idea is that with an <a href="/media/opensearch.xml">opensearch.xml</a>-compatible browser, you set webCLI as your default search engine, so that you can type "gim porsche 911" straight in your browsers address bar to search Google Images for a porsche 911.
+		The idea is that with an <a href="/static/opensearch.xml">opensearch.xml</a>-compatible browser, you set webCLI as your default search engine, so that you can type "gim porsche 911" straight in your browsers address bar to search Google Images for a porsche 911.
 	</p>
 
 	<ul class="commands">
