--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -11,12 +11,13 @@
 <body>
 
 <div id="main">
-	<p><b>webCLI</b>, a command-line interface to the web.</p>
-
-	<p>
-		webCLI is essentially a <a href="http://yubnub.org/">yubnub</a> clone, because... REASONS!<br>
-		The idea is that with an <a href="/static/opensearch.xml">opensearch.xml</a>-compatible browser, you set webCLI as your default search engine, so that you can type "gim porsche 911" straight in your browsers address bar to search Google Images for a porsche 911.
-	</p>
+	<div id="header"
+		<p><img src="/static/favicon.png"> <b>webCLI</b>, a <a href="http://yubnub.org/">YubNub</a>-inspired command-line interface to the web.</p>
+	
+		<p>
+			Set webCLI as the default search engine in an <a href="/static/opensearch.xml">opensearch</a>-compatible browser. Then type "gim porsche 928" in your browser's address bar to search Google Images for a porsche 928.
+		</p>
+	</div>
 
 	<ul class="commands">
 		{% for c in commands %}
