--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -1,34 +1,22 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
-<head>
-	<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-	<title>webCLI</title>
-	<link rel="stylesheet" type="text/css" href="/static/webcli.css">
-	<link rel="icon" href="/static/favicon.png">
-	<link rel="search" type="application/opensearchdescription+xml" href="/static/opensearch.xml" title="webCLI" />
-</head>
-
-<body>
-
-<div id="main">
-	<div id="header"
+	<head>
+		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+		<title>webCLI</title>
+		<link rel="stylesheet" type="text/css" href="/static/webcli.css">
+		<link rel="icon" href="/static/favicon.png">
+		<link rel="search" type="application/opensearchdescription+xml" href="/static/opensearch.xml" title="webCLI" />
+	</head>
+	<body>
 		<p><img src="/static/favicon.png"> <b>webCLI</b>, a <a href="http://yubnub.org/">YubNub</a>-inspired command-line interface to the web.</p>
-	
-		<p>
-			Set webCLI as the default search engine in an <a href="/static/opensearch.xml">opensearch</a>-compatible browser. Then type "gim porsche 928" in your browser's address bar to search Google Images for a porsche 928.
-		</p>
-	</div>
-
-	<ul class="commands">
-		{% for c in commands %}
+		<p>Set webCLI as the default search engine in an <a href="/static/opensearch.xml">opensearch</a>-compatible browser. Then type "gim porsche 928" in your browser's address bar to search Google Images for a porsche 928.</p>
+		<ul>
+			{% for c in commands %}
 			<li {%if c.popular%}class="popular"{%endif%} {%if c.common%}class="common"{%endif%}>
-				<span class="cmd">{{c.keyword}} {%if c.suggest_url%}...{%endif%}</span>
-				<span class="uses">{{c.use_count}}</span>
-				<span class="desc">{{c.title}}</span>
+				<cmd>{{c.keyword}} {%if c.suggest_url%}...{%endif%}</cmd>
+				<uses>{%if c.popular%}★{%endif%}{%if c.common%}☆{%endif%}</uses>
+				<desc>{{c.title}}</desc>
 			</li>
-		{% endfor %}
-	</ul>
-</div>
-
-</body>
+			{% endfor %}
+		</ul>
+	</body>
 </html>
