--- a/webcli/cli/templates/home.html
+++ b/webcli/cli/templates/home.html
@@ -4,7 +4,7 @@
 		<title>webCLI</title>
 		<link rel="stylesheet" type="text/css" href="/static/webcli.css">
 		<link rel="icon" href="/static/favicon.png">
-		<link rel="search" type="application/opensearchdescription+xml" href="/static/opensearch.xml" title="webCLI" />
+		<link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="webCLI" />
 	</head>
 	<body>
 		<p><img src="/static/favicon.png"> <b>webCLI</b>, a <a href="http://yubnub.org/">YubNub</a>-inspired command-line interface to the web.</p>
