Fixed page title in bookmark view

--- a/webcli/cli/templates/bookmark.html
+++ b/webcli/cli/templates/bookmark.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
-		<title>webCLI FIXME</title>
+		<title>webCLI - {{cmd.title}}</title>
 		<link rel="stylesheet" type="text/css" href="/static/webcli.css">
 		<link rel="icon" href="/static/favicon.png">
 		<link rel="search" type="application/opensearchdescription+xml" href="/opensearch.xml" title="webCLI" />
